# django-playground

./: pyproject.toml  pyrightconfig.json
src/microblog/blog/: models.py  views.py
src/microblog/blog/migrations/: 0001_initial.py  0002_comment.py
src/microblog/blog/templates/blog/: base.html  frontpage.html  post_detail.html
src/microblog/microblog/: settings.py  urls.py
