[project]
name = "mycroblog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "naoking158", email = "naoki@bbo.cs.tsukuba.ac.jp" }
]
dependencies = [
    "django>=4.2.13",
    "django-types>=0.19.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/microblog"]
